--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -1,7 +1,7 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/5
   .md:w-4/5
-    = render 'home/breadcrumb'
+    = render 'layouts/breadcrumb'
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/5 data-controller='manage-index'
     details.md:hidden.px-8
