--- a/app/views/key_numbers/index.html.slim
+++ b/app/views/key_numbers/index.html.slim
@@ -1,5 +1,5 @@
 .container.mx-auto.mb-3
-  / = render 'home/breadcrumb'
+  / = render 'layouts/breadcrumb'
   h1.text-6xl.font-bold.text-center.mt-16.mb-16.text-gray-900 Chiffres clés
 
   .flex.flex-wrap
