--- a/app/views/admin/activities/_form.html.slim
+++ b/app/views/admin/activities/_form.html.slim
@@ -7,6 +7,10 @@
 = render "admin/themes/form_items/theme_checkboxes", f: f
 = render "admin/profiles/form_items/profile_checkboxes", f: f
 
+.form-group.required
+  = f.label :short_description, class: "font-weight-bold"
+  = f.text_field :short_description, class: 'form-control'
+
 .form-group
   = f.label :description, class: "font-weight-bold"
   = f.rich_text_area :description
