--- a/app/views/admin/themes/_form.html.slim
+++ b/app/views/admin/themes/_form.html.slim
@@ -8,6 +8,10 @@
   = f.label :baseline, class: "font-weight-bold"
   = f.text_field :baseline, class: 'form-control'
 
+.form-group.required
+  = f.label :short_description, class: "font-weight-bold"
+  = f.text_field :short_description, class: 'form-control'
+
 .form-group
   = f.label :description, class: "font-weight-bold"
   = f.rich_text_area :description
