--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,5 +1,5 @@
 .container.mx-auto.mb-3
-  / = render 'home/breadcrumb'
+  / = render 'layouts/breadcrumb'
   h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 Événements
 
   h2.text-2xl.font-bold.text-center.mt-16.mb-4.text-gray-900 Événements futurs
