--- a/app/views/formations/show.html.slim
+++ b/app/views/formations/show.html.slim
@@ -1,3 +1,3 @@
 .container.mx-auto
-  .mb-4= render 'home/breadcrumb'
+  .mb-4= render 'layouts/breadcrumb'
   = render 'formations/formation_card', formation: @formation
