--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -5,6 +5,8 @@
     p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @profile.baseline
     - if @profile.image.present?
       = image_tag  @profile.image, class: "mb-8 mx-auto"
+    - if @profile.short_description.present?
+      p.mb-24.text-primary.text-lg= @profile.short_description
     .mb-24== @profile.description
 
   .md:w-2/6.px-4.md:pr-0
