--- a/app/views/staff_members/index.html.slim
+++ b/app/views/staff_members/index.html.slim
@@ -1,5 +1,5 @@
 .container.mx-auto.mb-3
-  = render 'home/breadcrumb'
+  = render 'layouts/breadcrumb'
   h1.text-6xl.font-bold.text-center.mt-16.mb-16.text-gray-900 Equipe
 
   - @staff_member_categories.each do |category|
