--- a/app/views/main_pages/show.html.slim
+++ b/app/views/main_pages/show.html.slim
@@ -1,26 +1,20 @@
-.container.mx-auto.mb-6
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @main_page.title
-  p.text-center.text-4xl.text-gray-800.mb-16 = @main_page.baseline
-  - if @main_page.image.present?
-    = image_tag  @main_page.image, class: "mb-8 mx-auto"
-    - if @main_page.short_description.present?
-      p.mb-24.text-primary.text-lg= @main_page.short_description
-  .mb-24== @main_page.description
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-4/6
+    = render 'layouts/breadcrumb'
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @main_page.title
+    p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @main_page.baseline
+    - if @main_page.image.present?
+      = image_tag  @main_page.image, class: "mb-8 mx-auto"
+      - if @main_page.short_description.present?
+        p.mb-24.text-primary.text-lg= @main_page.short_description
+    .mb-24== @main_page.description
 
   / - if @main_page.key == "key_numbers"
   /   = render 'main_pages/key_numbers'
-
-  .flex
-    - if @main_page.resources.any?
-      .w-1/3
-        h3.text-2xl.font-bold.mb-3 Ressources
-        ul
-          = render partial: 'resources/resource', collection: @main_page.resources, as: :resource
-
-  - if @main_page.child_pages.enabled.any?
-    .w-1/3
-      h3.text-2xl.font-bold.mb-3 Pour aller plus loin
-      ul
-        - @main_page.child_pages.enabled.each do |child_page|
-          li
-            = link_to child_page.title, show_page_path(child_page), class: 'underline'
+  .md:w-2/6.px-4.md:pr-0
+    = render 'resources/section', resources: @main_page.resources.enabled
+    = render 'main_pages/section', main_pages: @main_page.child_pages.enabled
