--- a/app/views/posts/_section.html.slim
+++ b/app/views/posts/_section.html.slim
@@ -1,5 +1,5 @@
 - if posts.any?
-  h2.text-2xl.text-primary.uppercase.mt-12.mb-4 Dernières actualités
+  h2.text-2xl.text-primary.uppercase.mt-12.mb-4 Dernières actualités en lien
   .grid.grid-cols-1.md:grid-cols-2.gap-4
     - posts.each do |post|
       div
