--- a/app/views/themes/_by_theme_filter.html.slim
+++ b/app/views/themes/_by_theme_filter.html.slim
@@ -3,9 +3,9 @@
     h4.uppercase.text-primary.mb-2 Thème
     - themes.each do |theme|
 
-      div.flex.flex.row.justify-between.c-checkbox.relative
+      div.flex.flex.row.justify-between.c-checkbox.relative.cursor-pointer
         => check_box_tag "by_theme[]", theme.id, \
           params[:by_theme].present? && params[:by_theme].include?(theme.id.to_s), \
           id: "by_theme_#{theme.id}", class: 'sr-only', \
           data: {action: 'change->manage-index#submitFilterForm'}
-        = label_tag "by_theme[#{theme.id}]", theme.title, class: "c-checkbox__label"
+        = label_tag "by_theme[#{theme.id}]", theme.title, class: "c-checkbox__label cursor-pointer"
