--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -114,3 +114,10 @@ html, body
 
 .bg-primary-bis
   background-color: var(--color-primary)
+
+.tabs
+  a.active
+    @apply text-primary
+    border: 1px solid #ccc
+    border-bottom: 2px solid var(--color-primary)
+    background-color: #fff
