--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -1,13 +1,12 @@
-.container.mx-auto.mb-6
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @basic_page.title
-  / - if @basic_page.image.present?
-  /   = image_tag  @basic_page.image, class: "mb-8 mx-auto"
-  .mb-24== @basic_page.description
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-4/6
+    / = render 'layouts/breadcrumb'
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @basic_page.title
+    .mb-24== @basic_page.description
 
-
-  - if @basic_page.resources.any?
-    .w-1/3
-      h3.text-2xl.font-bold.mb-3 Ressources
-      ul
-        = render partial: 'resources/resource', collection: @basic_page.resources, as: :resource
-
+  .md:w-2/6.px-4.md:pr-0
+    = render 'resources/section', resources: @basic_page.resources.enabled
