--- a/app/views/searches/show.html.slim
+++ b/app/views/searches/show.html.slim
@@ -1,10 +1,19 @@
-.container.mx-auto.mb-6
-  .mb-4
-    h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 Votre recherche
-    .mx-auto.max-w-xl
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-4/6
+    / = render 'layouts/breadcrumb'
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 Votre recherche
+    .max-w-xl.mb-8
       = render 'searches/form'
 
-  ul.flex.flex-wrap
-    - @results.each do |result|
-      li.w-1/2
-        = render 'searches/card', result: result
+    .grid.grid-cols-1.md:grid-cols-2.gap-4
+      = render partial: 'searches/card', collection: @results, as: :result
+
+    - if @results.empty?
+      .text-center
+        p.text-lg.mb-6 Il n'y a pas de résultat à votre recherche
+        p= link_to "Retourner à la page d'accueil", root_path, class: "uppercase text-primary underline"
+
