--- a/app/front/styles/application/form.sass
+++ b/app/front/styles/application/form.sass
@@ -21,3 +21,5 @@ form label.required:after
   border-color: #afafaf
   background: url('../images/checkmark.svg') center/12px no-repeat
 
+
+.participant-form_label
