--- a/app/views/formations/subscriptions/new.html.slim
+++ b/app/views/formations/subscriptions/new.html.slim
@@ -1,43 +1,43 @@
-.container.mx-auto.mb-24
-  .formation-info.mb-4
-    h1.mt-16.mb-4
-      .text-2xl.font-bold.text-center.text-gray-900 Inscription à la formation
-      .text-4xl.font-bold.text-center.text-gray-900 = @formation.title
-    p = formation_dates(@formation)
-    p 
-      span.uppercase.font-bold Lieu : 
-      => formation_location(@formation)
-    p 
-      span.uppercase.font-bold Intervenant·e : 
-      => @formation.speaker
-    p 
-      span.uppercase.font-bold Tarif : 
-      | #{number_to_euro(@formation.cost)} / personne
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.mt-12.mb-4
+      .text-2xl.itc-demi.text-primary.uppercase.text-center Inscription à la formation
+      .text-4xl.itc-demi.text-primary.uppercase.text-center = @formation.title
+    .bg-gray-200.px-4.py-3.mb-8.flex.flex-col.md:flex-row.text-sm
+      .w-full
+        = render 'formations/meta_info', formation: @formation
 
-  = form_with model: @subscription, url: formation_subscriptions_path, local: true do |f|
-    = f.form_errors
-    = f.hidden_field :formation_id, value: @formation.id
+    = form_with model: @subscription, url: formation_subscriptions_path, local: true do |f|
+      = f.form_errors
+      = f.hidden_field :formation_id, value: @formation.id
 
-    h4.text-2xl.font-bold Participants
-    div data-controller="nested-fields"
-      template data-target="nested-fields.template"
-        = f.fields_for :participants, Participant.new, child_index: 'NEW_RECORD' do |participant|
+      h4.text-2xl.itc-demi.text-primary.uppercase Participants
+      div data-controller="nested-fields"
+        template data-target="nested-fields.template"
+          = f.fields_for :participants, Participant.new, child_index: 'NEW_RECORD' do |participant|
+            = render "participant_fields", f: participant
+
+        = f.fields_for :participants do |participant|
           = render "participant_fields", f: participant
 
-      = f.fields_for :participants do |participant|
-        = render "participant_fields", f: participant
+        div data-target="nested-fields.links"
+        p.text-xs.italic.leading-tight.text-gray-500.mb-10 * : Champs obligatoire, notamment pour pouvoir vous contacter pour l'organisation ou les changements de dernière minute des formations
+        
+        .text-center.mb-12
+          = link_to "Ajouter un participant", "#", class: 'btn btn-default mx-auto', data: { action: "click->nested-fields#add_association" }
 
-      .mb-10 data-target="nested-fields.links"
-        = link_to "Ajouter un participant", "#", class: "underline", data: { action: "click->nested-fields#add_association" }
+        .mb-10
+          label.block.text-gray-800
+            = f.check_box :save_subscription, {class: 'mr-2 leading-tight'}
+            = f.label :save_subscription, "Garder en mémoire les participants pour une autre inscription", class: 'font-bold'
+            p.text-xs.italic.text-gray-500 
+              ' Vos prochains formulaires d'inscription seront pré-remplis. 
+            p.text-xs.italic.text-gray-500 
+              ' La liste des participants est gardée en mémoire tant que votre navigateur reste ouvert.
 
-      .mb-10
-        label.block.text-gray-800
-          = f.check_box :save_subscription, {class: 'mr-2 leading-tight'}
-          = f.label :save_subscription, "Garder en mémoire les participants pour une autre inscription", class: 'font-bold'
-          p.text-sm.italic Vos prochains formulaires d'inscription seront pré-remplis et la liste des participants est gardée en mémoire tant que votre navigateur reste ouvert.
-
-    .mx-auto.text-center
-      => f.submit "Valider l'inscription", class: 'mb-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded'
-      p.text-sm.italic.md:w-2/3.mx-auto
-        ' En cliquant sur "Valider", j’accepte que mes informations soient utilisées par le pôle ESS pour la gestion des formations, conformément à la
-        => link_to " politique de confidentialité",  "#", target: "_blank", class: "underline"
+      .mx-auto.text-center
+        => f.submit "Valider l'inscription", class: 'btn btn-primary'
+        p.text-xs.text-gray-500.italic.md:w-2/3.mx-auto.mt-3
+          ' En cliquant sur "Valider", j’accepte que mes informations soient utilisées par le pôle ESS pour la gestion des formations, conformément à la
+          => link_to " politique de confidentialité",  "#", target: "_blank", class: "underline"
