--- a/app/views/formations/subscriptions/_participant_fields.html.slim
+++ b/app/views/formations/subscriptions/_participant_fields.html.slim
@@ -1,31 +1,30 @@
-= content_tag :div, class: "nested-fields py-4 px-4 bg-gray-200 my-3", data: { new_record: f.object.new_record? } do
+= content_tag :div, class: "nested-fields py-4 px-4 bg-gray-50 my-3 border-primary border-r-4", data: { new_record: f.object.new_record? } do
   = f.hidden_field :id
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :organization, class:"block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :organization, class:"block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :organization, data: {target: 'nested-fields.copyField'}, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
+      = f.text_field :organization, data: {target: 'nested-fields.copyField'}, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :firstname, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :firstname, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :firstname, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
+      = f.text_field :firstname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :lastname, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :lastname, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :lastname, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
+      = f.text_field :lastname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :email, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :email, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.email_field :email, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
+      = f.email_field :email, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :phone, class:"required block text-gray-700 font-bold md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :phone, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :phone, class: 'appearance-none border-2 border-gray-400 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500'
-  small= link_to "Supprimer", "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link underline"
-  br
+      = f.text_field :phone, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+  
+  small= link_to "Supprimer", "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link underline uppercase text-red-500"
   = f.hidden_field :_destroy
-  small.italic * : Champs obligatoire, notamment pour pouvoir vous contacter pour l'organisation ou les changements de dernière minute des formations
