--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -1,8 +1,7 @@
-.container.mx-auto.mb-3
-  = render 'layouts/breadcrumb'
-  h1.text-6xl.font-bold.text-center.mt-16.mb-16.text-gray-900 Partenaires
+- content_for :title, 'Partenaires'
 
+= render layout: 'layouts/base' do
   - @partner_categories.each do |category|
-    h2.text-4xl.font-bold.text-gray-900.mb-6.text-center = category.title
-    .flex.flex-nowrap.justify-center
-      = render partial: 'partners/card', collection: category.partners.enabled, as: :partner
+    h2.itc-demi.text-2xl.text-primary.uppercase.mb-6.text-center = category.title
+    .grid.grid-cols-1.md:grid-cols-2.gap-4
+      = render partial: 'shared/person_card', collection: category.partners.enabled, as: :person
