Style trix, improve person layout and key numbers

--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -57,8 +57,15 @@ html, body
 .trix-content
   h1
     @apply text-xl
+    text-transform: uppercase
   a
     text-decoration: underline
+    @apply text-primary
+  ul
+    list-style: disc inside
+  ol
+    list-style-type: decimal
+    list-style-position: inside
 
 .footer-line
   height: 15px
