Minor style updates

--- a/app/front/styles/application/font-face.scss
+++ b/app/front/styles/application/font-face.scss
@@ -157,6 +157,10 @@
   font-family: 'ITC Avant Garde Gothic Std Demi';
 }
 
+.itc-bold {
+  font-family: 'ITC Avant Garde Gothic Std Bold';
+}
+
 .calibri {
 
 }
