--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -1,7 +1,7 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4  = @activity.title
+    h1.main-title.mt-6.mb-4  = @activity.title
     .flex.mb-8
       - @activity.themes.enabled.each do |theme|
         .bg-primary.px-3.py-2.mr-2
