--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -21,10 +21,10 @@
 
 
   .md:w-4/5.bg-white
-    h1.text-5xl.md:text-6xl.px-8.my-12.text-primary.itc-demi.uppercase Formations
+    h1.main-title.px-8.my-12 Formations
     - if params[:sort] == 'by_future'
       = render partial: 'formations/formation_card', collection: @formations, as: :formation
     - else
       - @formations.each do |category, formations|
-        h2.px-8.text-4xl.text-primary.itc-demi.uppercase.mb-6 = category.title
+        h2.text-3xl.text-primary.itc-demi.uppercase.px-8.mb-6 = category.title
         = render partial: 'formations/formation_card', collection: formations, as: :formation
