--- a/app/views/searches/show.html.slim
+++ b/app/views/searches/show.html.slim
@@ -5,7 +5,7 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 Votre recherche
+    h1.main-title.mt-6.mb-4 Votre recherche
     .max-w-xl.mb-8
       = render 'searches/form'
 
