--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,7 +1,7 @@
 .tabs.flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 Événements
+    h1.main-title.mt-6.mb-4 Événements
 
     .flex.flex-col.sm:flex-row.mb-6
       = active_link_to "Événements futurs", events_path, active: :exclusive, class: "itc-demi w-1/2 text-xl text-gray-500 uppercase py-4 px-6 block hover:text-primary focus:outline-none bg-gray-100 border-transparent border-b-gray-300 border-b-2"
