--- a/app/views/formations/_formation_card.html.slim
+++ b/app/views/formations/_formation_card.html.slim
@@ -1,7 +1,7 @@
 .mb-12
   .flex.flex-col.md:flex-row
     .w-full.md:w-3/5.px-8 
-      h3.text-2xl.text-primary.itc-demi.uppercase.mb-3 = formation.title
+      h3.title-2.mb-3 = formation.title
       - unless params['sort']=='by_formation_category'
         = formation.formation_category.title
       .mb-3.text-sm == formation.description
