--- a/app/views/formations/subscriptions/new.html.slim
+++ b/app/views/formations/subscriptions/new.html.slim
@@ -3,7 +3,7 @@
   .md:w-3/6.bg-white.p-6
     h1.mt-12.mb-4
       .text-2xl.itc-demi.text-primary.uppercase.text-center Inscription à la formation
-      .text-4xl.itc-demi.text-primary.uppercase.text-center = @formation.title
+      .main-title.text-center = @formation.title
     .bg-gray-200.px-4.py-3.mb-8.flex.flex-col.md:flex-row.text-sm
       .w-full
         = render 'formations/meta_info', formation: @formation
