--- a/app/views/layouts/_base.html.slim
+++ b/app/views/layouts/_base.html.slim
@@ -5,5 +5,5 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-4/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = content_for :title
+    h1.main-title.mt-6.mb-4 = content_for :title
     = yield
