--- a/app/views/main_pages/show.html.slim
+++ b/app/views/main_pages/show.html.slim
@@ -5,7 +5,7 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @main_page.title
+    h1.main-title.mt-6.mb-4 = @main_page.title
     p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @main_page.baseline
     - if @main_page.image.present?
       = image_tag  @main_page.image, class: "mb-8 mx-auto"
