--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -13,7 +13,7 @@
 
 
   .md:w-4/5.bg-white.mb-16
-    h1.text-5xl.md:text-6xl.px-8.my-12.text-primary.itc-demi.uppercase Actualités
+    h1.main-title.px-8.my-12 Actualités
     .grid.grid-cols-1.md:grid-cols-2.gap-4.px-8
       = render partial: 'posts/card', collection: @posts, as: :post
     - if @posts.empty?
