--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,7 +5,7 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @post.title
+    h1.main-title.mt-6.mb-4 = @post.title
     - if @post.image.present?
       = image_tag  @post.image, class: "mb-8 mx-auto"
     .mb-24== @post.description
