--- a/app/front/styles/application/custom.sass
+++ b/app/front/styles/application/custom.sass
@@ -21,3 +21,15 @@
 .bg-primary-bis
   background-image: url("../images/bg-primary-bis.png")
   // background-color: var(--color-primary)
+
+.footer-bottom
+  // // vallons
+  // background-color: var(--color-tercery)
+  // @apply text-white
+  // .emphasis
+  //   @apply text-primary
+  // broceliande
+  @apply bg-primary
+  @apply text-gray-200
+  .emphasis
+    @apply text-secondary
