--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -91,7 +91,7 @@ html lang="#{I18n.locale}"
                 ul
                   li.nav-item
                     = active_link_to admin_basic_pages_path, title: "Gérer les pages légales", class: "nav-link", active: :inclusive do
-                      i.fas.fa-snowflake>
+                      i.fas.fa-cog>
                       ' Pages légales
                   li.nav-item
                     = active_link_to admin_seos_path, title: "Gérer le référencement", class: "nav-link", active: :inclusive do
