--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -70,22 +70,28 @@ html, body
     list-style-type: decimal
     list-style-position: inside
 
+.bg-tercery
+  background-color: var(--color-tercery)
+
 .footer-line
   height: 15px
 .footer-line-xl
   height: 2rem
 .footer-title
-  @apply text-xl
+  @apply text-lg
   @apply uppercase
   @apply text-primary
+  margin-bottom: 1rem
 
 .footer-link
   @apply uppercase
   @apply text-gray-600
-  @apply text-sm
+  @apply text-xs
 
 .separator
   border-left: 1px solid var(--color-primary)
+  &.white
+    border-color: white
 
 .sr-only
   position: absolute
