--- a/app/views/admin/settings/show.html.slim
+++ b/app/views/admin/settings/show.html.slim
@@ -27,7 +27,7 @@
       .form-group
         = f.label :pole_mail
         = f.text_field :pole_mail, value: Setting.pole_mail, class: "form-control"
-    
+
     fieldset.border.p-2
       legend.w-auto Bloc newsletter
       .form-group
@@ -45,6 +45,15 @@
       .form-group
         = f.label :contact_bloc_button
         = f.text_field :contact_bloc_button, value: Setting.contact_bloc_button, class: "form-control"
+
+    fieldset.border.p-2
+      legend.w-auto Réseaux sociaux
+      .form-group
+        = f.label :facebook
+        = f.text_field :facebook, value: Setting.facebook, class: "form-control"
+      .form-group
+        = f.label :instagram
+        = f.text_field :instagram, value: Setting.instagram, class: "form-control"
 
     .form-group
       = f.label :default_tickets_count
