--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -99,30 +99,40 @@ html lang='fr'
           .w-full.md:w-1/3.py-3.md:py-8.px-8.text-gray-600
             - if Setting.logo_primary.present?
               => image_tag Setting.logo_primary.variant(resize_to_limit: [nil, 150]), class: "mb-5"
-            - if Setting.pole_name.present?
-              p.uppercase= Setting.pole_name
-            - if Setting.pole_address.present?
-              p= Setting.pole_address
-            - if Setting.pole_address_complementary.present?
-              p= Setting.pole_address_complementary
-            - if Setting.pole_city.present?
-              p= Setting.pole_city
-            - if Setting.pole_phone.present?
-              p= link_to Setting.pole_phone, "tel:#{Setting.pole_phone}", class: "text-primary"
-            - if Setting.pole_mail.present?
-              p= link_to Setting.pole_mail, "mailto:#{Setting.pole_mail}", class: "text-primary"
+            .pole-contact.ml-24
+              - if Setting.pole_name.present?
+                p.uppercase= Setting.pole_name
+              - if Setting.pole_address.present?
+                p.text-sm= Setting.pole_address
+              - if Setting.pole_address_complementary.present?
+                p.text-sm= Setting.pole_address_complementary
+              - if Setting.pole_city.present?
+                p.text-sm= Setting.pole_city
+              - if Setting.pole_phone.present?
+                p.text-sm= link_to Setting.pole_phone, "tel:#{Setting.pole_phone}", class: "text-primary"
+              - if Setting.pole_mail.present?
+                p.text-sm= link_to Setting.pole_mail, "mailto:#{Setting.pole_mail}", class: "text-primary"
 
-      .bg-primary.py-8
+      .footer-bottom.py-8
         .container.mx-auto.flex.flex-col.md:flex-row.justify-between
-          .links.flex.flex-col.md:flex-row.justify-between.text-gray-800
+          .links.flex.flex-col.md:flex-row.justify-between.items-center.text-sm
             .credit.px-3
-              => Date.current.year
+              span.emphasis=> Date.current.year
               => link_to "l'assembleuse", "https://www.lassembleuse.fr/"
               ' & 
-              = link_to "Ellllsa", "https://ellllsa.com/"
+              = link_to "© Ellllsa", "https://ellllsa.com/"
 
+            .separator.white.h-4.my-auto
             = link_to "Plan du site", "#", class: "px-3"
+            .separator.white.h-4.my-auto
             = link_to "Mentions légales", "#", class: "px-3"
-          .social
+          .social.flex-row.md:justify-end
+            - if Setting.facebook
+              = link_to Setting.facebook, title: "page facebook", class: "inline-block w-8 h-8 p-1 border text-center ml-2" do
+                i.fab.fa-facebook-f
+            - if Setting.instagram
+              = link_to Setting.instagram, title: "page instagram", class: "inline-block w-8 h-8 p-1 border text-center ml-2" do
+                i.fab.fa-instagram
+
 
 
