--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -123,7 +123,7 @@ html lang='fr'
               = link_to "© Ellllsa", "https://ellllsa.com/"
 
             .separator.white.h-4.my-auto
-            = link_to "Plan du site", "#", class: "px-3"
+            = link_to "Plan du site", sitemap_path, class: "px-3"
             .separator.white.h-4.my-auto
             = link_to "Mentions légales", "#", class: "px-3"
           .social.flex-row.md:justify-end
