Add activity card

--- a/app/front/styles/application/breadcrumb.sass
+++ b/app/front/styles/application/breadcrumb.sass
@@ -19,3 +19,7 @@
     //            - 900 for Solid symbols;
     //            - 300 for Light symbols. */
     // font-weight: 900
+
+.relationships > div:not(:last-child)
+  &:after
+    content: ' / '
