--- a/app/views/activities/_card.html.slim
+++ b/app/views/activities/_card.html.slim
@@ -1,1 +1,9 @@
-li= link_to activity.title, activity_path(activity), class: "underline"
+.overflow-hidden.box-link.cursor-pointer.border
+  - if activity.image.attached?
+    = image_tag activity.image.variant(resize_to_fill: [500, 300]), class: "w-full"
+  .px-6.py-4
+    = render 'shared/item_relations', item: activity
+    h3.text-lg.uppercase.text-primary.leading-5.mb-2
+      = link_to activity.title, activity_path(activity)
+    p.text-gray-700.text-sm
+      == activity.description.to_plain_text.truncate(200)
