--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -1,11 +1,9 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
+    = render 'shared/item_relations', item: @activity
+
     h1.main-title.mt-6.mb-4  = @activity.title
-    .flex.mb-8
-      - @activity.themes.enabled.each do |theme|
-        .bg-primary.px-3.py-2.mr-2
-          = theme.title
     - if @activity.image.present?
       = image_tag  @activity.image, class: "mb-8 mx-auto"
     - if @activity.short_description.present?
