Add home picture texture

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,8 @@
 .home-bg.flex
   .w-1/3.md:w-2/5
   .home-baseline.w-2/3.md:w-2/5.p-12.flex.items-center
-    .text-xl.md:text-4xl.uppercase.itc-md-cn = Setting.baseline
+    .home-baseline_text.text-xl.md:text-4xl.uppercase.itc-md-cn = Setting.baseline
+    .home-baseline_texture
 
 .mx-auto.mb-24
   .flex.flex-col.md:flex-row
