--- a/app/front/styles/application/home.sass
+++ b/app/front/styles/application/home.sass
@@ -7,6 +7,19 @@
 
 .home-baseline
   background-color: rgba(var(--color-primary-rgb), 0.8)
-  > div
-    line-height: 1.4
-    color: #fff
+  position: relative
+
+.home-baseline_text
+  line-height: 1.4
+  color: #fff
+  z-index: 2
+.home-baseline_texture
+  display: block
+  position: absolute
+  top: 0
+  left: 0
+  background-image: url("../images/texture-craft.jpg")
+  background-size: cover
+  width: 100%
+  height: 100%
+  opacity: 0.2
