--- a/app/views/profiles/_card.html.slim
+++ b/app/views/profiles/_card.html.slim
@@ -2,5 +2,5 @@
   .flex.flex-col.flex-shrink-0.w-16.p-1.border.border-gray-300.bg-gray-200.font-bold.text-gray-700.uppercase.leading-4.text-center
     = image_pack_tag "picto/Picto-#{profile.key}.svg", class: "w-full"
   .px-2
-    = link_to profile.title, profile_path(profile), class: 'itc-demi uppercase'
+    = link_to profile.title, profile_path(profile), class: 'itc-demi uppercase text-primary'
     p.text-xs= profile.baseline.truncate(50)
