--- a/app/front/styles/application/custom.sass
+++ b/app/front/styles/application/custom.sass
@@ -1,7 +1,9 @@
 // Fichier où mettre le style propre à chaque projet
 
-// .pic-home-01
+.home-baseline
+  background-color: rgba(var(--color-tercery-rgb), 0.8)
 
+// .pic-home-01
 
 // .pic-bottom
 
@@ -11,13 +13,8 @@
   // background-color: var(--color-primary)
 
 .footer-bottom
-  // // vallons
-  // background-color: var(--color-tercery)
-  // @apply text-white
-  // .emphasis
-  //   @apply text-primary
-  // broceliande
-  @apply bg-primary
-  @apply text-gray-200
+  // vallons
+  background-color: var(--color-tercery)
+  @apply text-white
   .emphasis
-    @apply text-secondary
+    @apply text-primary
